--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>AJAX-Demo Demo</title>
+    <title>jQuery.ajax Demo</title>
 </head>
 <body>
     <button id="button">Click Me</button>
     
-    <script src="/main.js"></script>
+    <script src="/main.js"></script> 
 </body>
 </html>
